App is now uploading images

--- a/IOSOHF15App/Localizable.strings
+++ b/IOSOHF15App/Localizable.strings
@@ -5,7 +5,9 @@
   Created by Thomas Kekeisen on 26/09/15.
   Copyright © 2015 Socialbit GmbH. All rights reserved.
 */
-"anErrorOccurred" = "Es ist ein Fehler aufgetreten";
-"appTitle"        = "Tagifai";
-"clarifaiError"   = "Dieses Bild konnte leider nicht verabeitet werden.";
-"ok"              = "OK";
+"anErrorOccurred"      = "Es ist ein Fehler aufgetreten";
+"appTitle"             = "Tagifai";
+"clarifaiError"        = "Dieses Bild konnte leider nicht verabeitet werden.";
+"clarifaiSuccessText"  = "Das Bild wurde erfolgreich in unsere Datenbank aufgenommen, danke!";
+"clarifaiSuccessTitle" = "Bild verarbeitet";
+"ok"                   = "OK";
