--- a/IOSOHF15App/Localizable.strings
+++ b/IOSOHF15App/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright © 2015 Socialbit GmbH. All rights reserved.
 */
 "anErrorOccurred"      = "Es ist ein Fehler aufgetreten";
-"appTitle"             = "Tagifai";
+"appTitle"             = "tagifai";
 "chooseType"           = "Typ wählen";
 "clarifaiError"        = "Dieses Bild konnte leider nicht verabeitet werden.";
 "clarifaiSuccessText"  = "Das Bild wurde erfolgreich in unsere Datenbank aufgenommen, danke!";
